fix: [lw-11746] align main loader in nami mode

--- a/apps/browser-extension-wallet/src/styles/index.scss
+++ b/apps/browser-extension-wallet/src/styles/index.scss
@@ -17,6 +17,7 @@
 }
 
 #lace-popup:not(:has(#hw-connect-flow)) > #nami-mode {
+  max-width: 100%;
   width: 400px;
 }
 
